welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:26: error: type mismatch;
 found   : Int
 required: String
	setCouleurBrosse((colorTable(j) + decalage)%6);
                                          ^